--- a/package.json
+++ b/package.json
@@ -8,31 +8,29 @@
   "repository": "k03mad/cli-tools-lan",
   "license": "MIT",
   "bin": {
-    "mad_lan_ip": "./app/ip.js",
-    "mad_lan_host": "./app/host.js"
+    "mad_lan_ip": "./app/ip.js"
   },
+  "type": "module",
   "engines": {
     "node": ">=14"
   },
   "dependencies": {
-    "@k03mad/utils": "20.5.0",
-    "colorette": "2.0.16",
+    "@k03mad/util": "4.0.0",
+    "chalk": "5.0.0",
     "command-line-args": "5.2.0",
     "command-line-usage": "6.1.1",
-    "ms": "2.1.3",
-    "my-local-ip-is": "1.0.7",
-    "oui": "11.0.94",
-    "p-timeout": "4.1.0",
-    "update-notifier": "5.1.0",
+    "lodash": "4.17.21",
     "xml-js": "1.6.11"
   },
   "devDependencies": {
-    "@k03mad/eslint-config": "9.0.0",
-    "eslint": "8.3.0",
-    "eslint-plugin-jsdoc": "37.0.3",
+    "@k03mad/eslint-config": "10.0.17",
+    "eslint": "8.6.0",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jsdoc": "37.5.1",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-sort-requires": "2.1.0",
-    "eslint-plugin-unicorn": "39.0.0",
+    "eslint-plugin-simple-import-sort": "7.0.0",
+    "eslint-plugin-sort-destructure-keys": "1.4.0",
+    "eslint-plugin-unicorn": "40.0.0",
     "husky": "7.0.4"
   },
   "scripts": {
